<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Better Nigeria</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="legal">Legal</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="credits">Credits</string>
    <string name="Developers">Developers</string>
    <string name="development_team">Development Team</string>
    <string name="content">Content</string>
    <string name="myvision_limited">MyVision Limited</string>
    <string name="supported_by">Supported By</string>
    <string name="eko_konnect">Eko Konnect</string>
    <string name="ford_foundation">Ford Foundation</string>
    <string name="kelvin_oguno">Kelvin Oguno A. (Team Lead)</string>
    <string name="tobi_badejo">Tobi Badejo</string>
    <string name="paula_aliu">Paula Aliu</string>
    <string name="i_believe">I Believe</string>
    <string name="manifesto_content">Manifesto Content Here \n Bla \n Bla \n Bla</string>
    
    <string-array name="language_array">
        <item >English</item>
        <item >Igbo</item>
        <item >Yoruba</item>
        <item >Hausa</item>
        <item >Pidgin</item>
    </string-array>
        <string name="no_content_n_click_refresh_to_download">No Content \n Click Refresh to Download</string>

</resources>
