<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <EditText
            android:id="@+id/ActivityManifestoFullNameEdittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/enter_full_name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/ActivityManifestoEmailEdittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp" />
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:orientation="horizontal"
		    android:layout_marginTop="15dp"
		    style="?android:attr/buttonBarStyle" >
		<Button
            android:id="@+id/ActivitymanifestoCancelButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@android:string/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onCanel" />
        <Button
            android:id="@+id/ActivitymanifestoSignButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/i_believe"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onBeleive" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>